# rust-chat-app

./: Cargo.toml
public/: chat.html  index.html
public/js/: chat.js
src/: main.rs
